--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react-bootstrap": "^1.3.0",
     "react-dom": "^16.13.1",
     "react-scripts": "3.4.3",
+    "react-select": "^3.1.0",
     "unsplash-js": "^6.3.0"
   },
   "scripts": {
